// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runBcnImporter > should import Bcn sources 1`] = `
{
  "_id": "ObjectId",
  "data": {
    "ANCIEN_DIPLOME_1": "50022304",
    "ANCIEN_DIPLOME_2": null,
    "ANCIEN_DIPLOME_3": null,
    "ANCIEN_DIPLOME_4": null,
    "ANCIEN_DIPLOME_5": null,
    "ANCIEN_DIPLOME_6": null,
    "ANCIEN_DIPLOME_7": null,
    "ANCIEN_RECME": "500835",
    "CITE_DOMAINE_DETAILLE": null,
    "CITE_DOMAINE_FORMATION": "521",
    "COMMENTAIRE": "A REMPLACE LE CAP FABRICATIONS EN ALLIAGES MOULES SUR MODELES (50022304S). ABROGE SANS REMPLACEMENT.",
    "DATE_ARRETE_ABROGATION": "20/03/2007",
    "DATE_ARRETE_CREATION": "06/08/1991",
    "DATE_ARRETE_MODIFICATION_1": null,
    "DATE_ARRETE_MODIFICATION_10": null,
    "DATE_ARRETE_MODIFICATION_2": null,
    "DATE_ARRETE_MODIFICATION_3": null,
    "DATE_ARRETE_MODIFICATION_4": null,
    "DATE_ARRETE_MODIFICATION_5": null,
    "DATE_ARRETE_MODIFICATION_6": null,
    "DATE_ARRETE_MODIFICATION_7": null,
    "DATE_ARRETE_MODIFICATION_8": null,
    "DATE_ARRETE_MODIFICATION_9": null,
    "DATE_DERNIERE_SESSION": "2008",
    "DATE_FERMETURE": "31/08/2009",
    "DATE_INTERVENTION": "10/12/2020",
    "DATE_OUVERTURE": "06/08/1991",
    "DATE_PREMIERE_SESSION": "1993",
    "DATE_SESSION_RATTRAPAGE": "2009",
    "FORMATION_DIPLOME": "50022326",
    "GESTIONNAIRE_FORMATION_DIPLOME": "DGESCO A2-3",
    "GROUPE_SPECIALITE": "223",
    "ID_DOCUMENT": null,
    "LETTRE_SPECIALITE": "S",
    "LIBELLE_COURT": "CAP",
    "LIBELLE_LONG_200": "ALLIAGES MOULES SUR MODELES (CAP)",
    "LIBELLE_STAT_33": "ALLIAGES MOULES SUR MODELES",
    "NATURE_FORMATION_DIPLOME": "1",
    "NB_MEF_FERME": "6",
    "NB_MEF_OUVERT": "0",
    "NIVEAU_FORMATION_DIPLOME": "500",
    "NIVEAU_QUALIFICATION_RNCP": "03",
    "NOUVEAU_DIPLOME_1": null,
    "NOUVEAU_DIPLOME_2": null,
    "NOUVEAU_DIPLOME_3": null,
    "NOUVEAU_DIPLOME_4": null,
    "NOUVEAU_DIPLOME_5": null,
    "NOUVEAU_DIPLOME_6": null,
    "NOUVEAU_DIPLOME_7": null,
    "N_CITE_2013_DOMAINE_DETAILL_LIBELLE_EDITION": null,
    "N_CITE_DOMAINE_FORMATION_LIBELLE_EDITION": "Mécanique et travail du métal",
    "N_COMMENTAIRE": null,
    "N_GROUPE_SPECIALITE_LIBELLE_LONG": "METALLURGIE (Y.C. SIDERURGIE, FONDERIE)",
    "N_LETTRE_SPECIALITE_LIBELLE_LONG": "PRODUCTION",
    "N_NATURE_FORMATION_DIPLOME_LIBELLE_100": "DIPLOME NATIONAL / DIPLOME D'ETAT",
    "N_NIVEAU_FORMATION_DIPLOME_LIBELLE_100": "CERTIFICAT D'APTITUDE PROFESSIONNELLE",
    "N_NIVEAU_QUALIFICATION_RNCP_LIBELLE_LONG": "NIVEAU 3",
    "OBSERVATION": "Grille horaire provisoire n°1.",
    "UNITE_CAPITALISABLE": "O",
  },
  "date": 2023-04-08T22:00:00.000Z,
  "source": "N_FORMATION_DIPLOME",
}
`;

exports[`runBcnImporter > should import Bcn sources 2`] = `
{
  "_id": "ObjectId",
  "data": {
    "ANCIEN_RECME": null,
    "CITE_DOMAINE_DETAILLE": null,
    "CITE_DOMAINE_FORMATION": "850",
    "COMMENTAIRE": "fermï¿½ suite ï¿½ Ar 22/02/2001 Controler libellï¿½ fermï¿½ suite ï¿½ Ar 22/02/2001",
    "DATE_ARRETE_ABROGATION": null,
    "DATE_ARRETE_CREATION": null,
    "DATE_ARRETE_MODIFICATION_1": "22/02/2001",
    "DATE_ARRETE_MODIFICATION_10": null,
    "DATE_ARRETE_MODIFICATION_2": null,
    "DATE_ARRETE_MODIFICATION_3": null,
    "DATE_ARRETE_MODIFICATION_4": null,
    "DATE_ARRETE_MODIFICATION_5": null,
    "DATE_ARRETE_MODIFICATION_6": null,
    "DATE_ARRETE_MODIFICATION_7": null,
    "DATE_ARRETE_MODIFICATION_8": null,
    "DATE_ARRETE_MODIFICATION_9": null,
    "DATE_DERNIERE_SESSION": null,
    "DATE_FERMETURE": "31/08/2001",
    "DATE_INTERVENTION": "06/01/2021",
    "DATE_OUVERTURE": "01/09/1998",
    "DATE_PREMIERE_SESSION": null,
    "DIPLOME_SISE": null,
    "FORMATION_DIPLOME": "1703430A",
    "GESTIONNAIRE_FORMATION_DIPLOME": "SPN",
    "GROUPE_SPECIALITE": "343",
    "HABILITATION_ORIGINE": null,
    "ID_DOCUMENT": null,
    "LETTRE_SPECIALITE": "M",
    "LIBELLE_COURT": "ING",
    "LIBELLE_LONG_200": "INGENIEUR EN HYGIENE INDUSTRIELLE ET ENVIRONNEMENT, DIPLOME DU CONSERVATOIRE NATIONAL DES ARTS ET METIERS CNAM (ING)",
    "LIBELLE_STAT_33": "EN HYGIENE INDUSTRIEL ET ENVIRONM",
    "NATURE_FORMATION_DIPLOME": "1",
    "NIVEAU_FORMATION_DIPLOME": "170",
    "NIVEAU_QUALIFICATION_RNCP": "07",
    "NUMERO_UAI": "0753471R",
    "N_CITE_2013_DOMAINE_DETAILL_LIBELLE_EDITION": null,
    "N_CITE_DOMAINE_FORMATION_LIBELLE_EDITION": "Protection de l'environnement",
    "N_COMMENTAIRE": null,
    "N_DIPLOME_SISE_LIBELLE_INTITULE_1": null,
    "N_GROUPE_SPECIALITE_LIBELLE_LONG": "NETTOYAGE, ASSAIN., PROTECTION ENVIRONMT",
    "N_LETTRE_SPECIALITE_LIBELLE_LONG": "AUTRE/NON INDIQUE (DOMAINE TECHNICO-PRO)",
    "N_NATURE_FORMATION_DIPLOME_LIBELLE_100": "DIPLOME NATIONAL / DIPLOME D'ETAT",
    "N_NIVEAU_FORMATION_DIPLOME_LIBELLE_100": "INGENIEURS RECONNUS (RCT..), NFI , ALTERNANCE",
    "N_NIVEAU_QUALIFICATION_RNCP_LIBELLE_LONG": "NIVEAU 7",
    "UNITE_CAPITALISABLE": null,
  },
  "date": 2023-04-08T22:00:00.000Z,
  "source": "N_FORMATION_DIPLOME_ENQUETE_51",
}
`;

exports[`runBcnImporter > should import Bcn sources 3`] = `
{
  "_id": "ObjectId",
  "data": {
    "ANCIEN_NIVEAU": null,
    "DATE_FERMETURE": null,
    "DATE_INTERVENTION": "10/12/2020",
    "DATE_OUVERTURE": "01/08/1996",
    "LIBELLE_100": "TITRE DE NIV 4  NON HOMOLOGUE - CQP....",
    "LIBELLE_COURT": "TNH4",
    "NIVEAU_FORMATION_DIPLOME": "4ZZ",
    "NIVEAU_INTERMINISTERIEL": "4",
    "NIVEAU_QUALIFICATION_RNCP": "04",
    "N_COMMENTAIRE": null,
    "N_NIVEAU_INTERMINISTERIEL_LIBELLE_LONG": "NIVEAU IV",
    "N_NIVEAU_QUALIFICATION_RNCP_LIBELLE_LONG": "NIVEAU 4",
  },
  "date": 2023-04-08T22:00:00.000Z,
  "source": "N_NIVEAU_FORMATION_DIPLOME",
}
`;

exports[`runBcnImporter > should import Bcn sources 4`] = `
{
  "_id": "ObjectId",
  "data": {
    "ANCIEN_RECME": null,
    "CITE_DOMAINE_FORMATION": "343",
    "COMMENTAIRE": "sup2000 remplace les 13531407 et 13531359",
    "DATE_ARRETE_ABROGATION": null,
    "DATE_ARRETE_CREATION": null,
    "DATE_ARRETE_MODIFICATION_1": null,
    "DATE_ARRETE_MODIFICATION_10": null,
    "DATE_ARRETE_MODIFICATION_2": null,
    "DATE_ARRETE_MODIFICATION_3": null,
    "DATE_ARRETE_MODIFICATION_4": null,
    "DATE_ARRETE_MODIFICATION_5": null,
    "DATE_ARRETE_MODIFICATION_6": null,
    "DATE_ARRETE_MODIFICATION_7": null,
    "DATE_ARRETE_MODIFICATION_8": null,
    "DATE_ARRETE_MODIFICATION_9": null,
    "DATE_DERNIERE_SESSION": null,
    "DATE_FERMETURE": "31/08/2020",
    "DATE_INTERVENTION": "10/12/2020",
    "DATE_OUVERTURE": "01/09/2014",
    "DATE_PREMIERE_SESSION": null,
    "FORMATION_DIPLOME": "13531364",
    "GESTIONNAIRE_FORMATION_DIPLOME": "DEPPA1",
    "GROUPE_SPECIALITE": "313",
    "ID_DOCUMENT": null,
    "LETTRE_SPECIALITE": "M",
    "LIBELLE_COURT": "MASTER PRO",
    "LIBELLE_LONG_200": "FINANCE (MASTER PARIS 12)",
    "LIBELLE_STAT_33": "FINANCE",
    "NATURE_FORMATION_DIPLOME": "1",
    "NIVEAU_FORMATION_DIPLOME": "135",
    "NIVEAU_QUALIFICATION_RNCP": "07",
    "N_CITE_DOMAINE_FORMATION_LIBELLE_EDITION": "Finance, banque, assurance",
    "N_GROUPE_SPECIALITE_LIBELLE_LONG": "FINANCES, BANQUE, ASSURANCES",
    "N_LETTRE_SPECIALITE_LIBELLE_LONG": "AUTRE/NON INDIQUE (DOMAINE TECHNICO-PRO)",
    "N_NATURE_FORMATION_DIPLOME_LIBELLE_100": "DIPLOME NATIONAL / DIPLOME D'ETAT",
    "N_NIVEAU_FORMATION_DIPLOME_LIBELLE_100": "MASTER PROFESSIONNEL",
    "N_NIVEAU_QUALIFICATION_RNCP_LIBELLE_LONG": "NIVEAU 7",
    "UNITE_CAPITALISABLE": null,
  },
  "date": 2023-04-08T22:00:00.000Z,
  "source": "V_FORMATION_DIPLOME",
}
`;
